--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="head-border">
                             <div></div>
                         </div>
-                        <h1>THE FASTER AND MOST EFFICIENT WAY<br /> TO SEND MONEY</h1>
+                        <h1>THE FASTER AND MOST EFFICIENT<br /> WAY TO SEND MONEY</h1>
                         <p class="lead">Agents and banks charge you steep fees when you send money abroad. With VeloxTransfer you save up to 75%. Great, right?.</p>
                     </div>
                     <!-- /.col -->
