--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                         <p class="lead">You could save an average of R$91.05 vs your bank.
                             <br />
-                            <a href="">How?</a>
+                            <a href="/how-it-works.html">How?</a>
                         </p>
                     </div>
                     <!-- /.col -->
@@ -338,6 +338,9 @@
                         <li>
                             <a href="/how-it-works.html">Transfer money to Venezuela</a>
                         </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to China</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.col -->
@@ -392,7 +395,7 @@
             <!-- /.foot-pontual -->
 
             <p>VeloxTransfer is an authorized agent of Pontual Money Transfer. Pontual is your payment specialist for money transfers to Brazil.<br /> Pontual is located at 111 N. Sepulveda Blvd., Suite 340, Manhattan Beach, CA 90266.</p>
-            <p>For more information, please, <a href="">click here</a>.</p>
+            <p>For more information, please, <a href="http://pontualmt.com/">click here</a>.</p>
         </div>
         <!-- /.foot__bot -->
     </div>
@@ -510,7 +513,7 @@
         <a href="/my-payments.html" class="btn btn-success btn-block">SIGN IN</a>
       </div>
       <div class="modal-footer">
-          <i class="glyphicon glyphicon-lock"></i> 100% secure & fully FCA regulated
+          <i class="glyphicon glyphicon-lock"></i> 100% secure & fully regulated
       </div>
     </div>
   </div>
@@ -564,7 +567,7 @@
         </a>
       </div>
       <div class="modal-footer">
-          <i class="glyphicon glyphicon-lock"></i> 100% secure & fully FCA regulated
+          <i class="glyphicon glyphicon-lock"></i> 100% secure & fully regulated
       </div>
     </div>
   </div>
