--- a/how-it-works.html
+++ b/how-it-works.html
@@ -111,8 +111,10 @@
                                       <input type="text" class="form-control form-control--noBorder" id="" placeholder="0.00" value="1.000">
                                       <div class="input-group-addon">
                                           <select id="" name="">
-                                              <option value="">USD</option>
-                                              <option value="">BRL</option>
+                                            <option value="">USD</option> 
+                                            <option value="">BRL</option> 
+                                            <option value="">VEF</option> 
+                                            <option value="">CNY</option> 
                                           </select>
                                       </div>
                                 </div>
@@ -127,8 +129,10 @@
                                       <input type="text" class="form-control form-control--noBorder" id="" placeholder="0.00" value="3.370">
                                       <div class="input-group-addon">
                                           <select id="" name="">
-                                              <option value="">BRL</option>
-                                              <option value="">USD</option>
+                                            <option value="">USD</option> 
+                                            <option value="">BRL</option> 
+                                            <option value="">VEF</option> 
+                                            <option value="">CNY</option> 
                                           </select>
                                       </div>
                                 </div>
