--- a/my-payments.html
+++ b/my-payments.html
@@ -200,7 +200,7 @@
         <tr>
             <th>Recent recipients</th>
             <th class="text-right">
-                <a href="">Add new</a>
+                <a href="/my-recipients.html">Add new</a>
             </th>
         </tr>
     </thead>
