--- a/index.html
+++ b/index.html
@@ -341,6 +341,21 @@
                          <li>
                             <a href="/how-it-works.html">Transfer money to China</a>
                         </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Argentina</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Bolivia</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Colombia</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to India</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Mexico</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.col -->
