--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                                           <option value="">BRL</option>
                                           <option value="">VEF</option>
                                           <option value="">CNY</option>
+                                          <option value="">ARS</option>
+                                          <option value="">BOB</option>
+                                          <option value="">COP</option>
+                                          <option value="">CNY</option>
+                                          <option value="">MXN</option>
+                                          <option value="">INR</option>
                                       </select>
                                   </div>
                             </div>
@@ -79,6 +85,12 @@
                                           <option value="">BRL</option>
                                           <option value="">VEF</option>
                                           <option value="">CNY</option>
+                                          <option value="">ARS</option>
+                                          <option value="">BOB</option>
+                                          <option value="">COP</option>
+                                          <option value="">CNY</option>
+                                          <option value="">MXN</option>
+                                          <option value="">INR</option>
                                       </select>
                                   </div>
                             </div>
