--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                                           <option value="">CNY</option>
                                           <option value="">MXN</option>
                                           <option value="">INR</option>
+                                          <option value="">PHP</option>
                                       </select>
                                   </div>
                             </div>
@@ -91,6 +92,7 @@
                                           <option value="">CNY</option>
                                           <option value="">MXN</option>
                                           <option value="">INR</option>
+                                          <option value="">PHP</option>
                                       </select>
                                   </div>
                             </div>
