--- a/my-payments.html
+++ b/my-payments.html
@@ -331,7 +331,7 @@
                     <h5><strong>Countries & Currencies</strong></h5>
 
                     <ul class="foot-list">
-                        <li>
+                          <li>
                             <a href="/how-it-works.html">Transfer money to USA</a>
                         </li>
                         <li>
@@ -339,6 +339,24 @@
                         </li>
                         <li>
                             <a href="/how-it-works.html">Transfer money to Venezuela</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to China</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Argentina</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Bolivia</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Colombia</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to India</a>
+                        </li>
+                         <li>
+                            <a href="/how-it-works.html">Transfer money to Mexico</a>
                         </li>
                     </ul>
                 </div>
