--- a/send-money.html
+++ b/send-money.html
@@ -464,6 +464,10 @@
                                             <label for="">Bank name:</label>
                                             <select id="" name="" class="form-control">
                                                 <option value="">Banco Itaú S. A.</option>
+                                                <option value="">Banco do Brasil.</option>
+                                                <option value="">Bradesco</option>
+                                                <option value="">Caixa Economica Federal</option>
+                                                <option value="">Santander</option>
                                             </select>
                                         </div>
                                         <!-- /.form-group -->
