--- a/my-recipients.html
+++ b/my-recipients.html
@@ -558,6 +558,14 @@
 
 <script src="assets/js/jquery/dist/jquery.js"></script>
 <script src="assets/js/bootstrap/bootstrap.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-67392629-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
 
