--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
                     <ul class="foot-list">
                         <li>
-                            <a href="">
+                            <a href="https://www.facebook.com/veloxtransfer" target="_blank">
                                 Facebook
                             </a>
                         </li>
