--- a/my-recipients.html
+++ b/my-recipients.html
@@ -199,7 +199,7 @@
         <tr>
             <th>Recent recipients</th>
             <th class="text-right">
-                <a href="/my-recipients.html">Add new</a>
+                <a href="/new-recipient.html">Add new</a>
             </th>
         </tr>
     </thead>
