--- a/my-payments.html
+++ b/my-payments.html
@@ -227,13 +227,13 @@
         <tr>
             <td>Al Gore</td>
             <td class="text-right">
-                <a href="">View recipt</a>
+                <a href="">View receipt</a>
             </td>
         </tr>
         <tr>
             <td>Al Gore</td>
             <td class="text-right">
-                <a href="">View recipt</a>
+                <a href="">View receipt</a>
             </td>
         </tr>
     </tbody>
