--- a/my-recipients.html
+++ b/my-recipients.html
@@ -189,7 +189,7 @@
     </div>
     <!-- /.form-group -->
 
-    <a href="/send-money.html" button class="btn btn-success btn-block">TRANSFER NOW</button>
+    <a href="/send-money.html" button class="btn btn-success btn-block">TRANSFER NOW</button></a>
 </div>
 <!-- /.well -->
 
