--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                         </div>
                         <!-- /.form-group -->
 
-                        <button class="btn btn-success btn-block">TRANSFER NOW</button>
-
+                        <a href="/send-money.html" button class="btn btn-success btn-block">TRANSFER NOW</button></a>
                         <br />
 
                         <button class="btn btn-default btn-block">Alert me when rate improves</button>
