--- a/my-payments.html
+++ b/my-payments.html
@@ -206,7 +206,7 @@
     </div>
     <!-- /.form-group -->
 
-    <button class="btn btn-success btn-block">TRANSFER NOW</button>
+    <a href="/send-money.html" button class="btn btn-success btn-block">TRANSFER NOW</button></a>
 </div>
 <!-- /.well -->
 
