--- a/how-it-works.html
+++ b/how-it-works.html
@@ -478,7 +478,7 @@
 
                     <ul class="foot-list">
                         <li>
-                            <a href="">
+                            <a href="http://www.facebook.com/VeloxTransfer" target="_blank">
                                 Facebook
                             </a>
                         </li>
