--- a/send-money.html
+++ b/send-money.html
@@ -232,13 +232,13 @@
                                             <div class="row">
                                                 <!-- .col -->
                                                 <div class="col-md-4">
-                                                    <input class="form-control" name="" id="" type="text" placeholder="">
+                                                    <input class="form-control" name="" id="" type="text" placeholder="1234">
                                                 </div>
                                                 <!-- /.col -->
 
                                                 <!-- .col -->
                                                 <div class="col-md-8">
-                                                    <input class="form-control" name="" id="" type="text" placeholder="">
+                                                    <input class="form-control" name="" id="" type="text" placeholder="acct number">
                                                 </div>
                                                 <!-- /.col -->
                                             </div>
@@ -888,7 +888,7 @@
 
                     <ul class="foot-list">
                         <li>
-                            <a href="">
+                            <a href="http://www.facebook.com/VeloxTransfer" target="_blank">
                                 Facebook
                             </a>
                         </li>
