--- a/send-money.html
+++ b/send-money.html
@@ -227,6 +227,8 @@
                                         <!-- .form-group -->
                                         <div class="form-group">
                                             <label for="">Branch Code:</label>
+                                            <div class="form-group">
+                                            <label for="">Account:</label>
 
                                             <!-- .row -->
                                             <div class="row">
